# ForgeFrame

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  EFFECTS_DISCUSSION.md  README.md  bash.exe.stackdump  forge-project.json  grep.exe.stackdump  pyproject.toml
workshop-video-brain/: .mcp.json  plugin.json  pyproject.toml
workshop-video-brain/.claude-plugin/: plugin.json
workshop-video-brain/skills/ff-assemble-from-script/: SKILL.md
workshop-video-brain/skills/ff-audio-cleanup/: SKILL.md
workshop-video-brain/skills/ff-auto-editor/: SKILL.md
workshop-video-brain/skills/ff-broll-whisperer/: SKILL.md
workshop-video-brain/skills/ff-capture-prep/: SKILL.md
workshop-video-brain/skills/ff-effect-cookbook/: SKILL.md
workshop-video-brain/skills/ff-finishing/: SKILL.md
workshop-video-brain/skills/ff-init/: SKILL.md
workshop-video-brain/skills/ff-new-project/: SKILL.md
workshop-video-brain/skills/ff-obsidian-video-note/: SKILL.md
workshop-video-brain/skills/ff-pacing-meter/: SKILL.md
workshop-video-brain/skills/ff-pattern-brain/: SKILL.md
workshop-video-brain/skills/ff-publish/: SKILL.md
workshop-video-brain/skills/ff-rough-cut-review/: SKILL.md
workshop-video-brain/skills/ff-shot-plan/: SKILL.md
workshop-video-brain/skills/ff-social-clips/: SKILL.md
workshop-video-brain/skills/ff-tutorial-script/: SKILL.md
workshop-video-brain/skills/ff-video-idea-to-outline/: SKILL.md
workshop-video-brain/skills/ff-voiceover-fixer/: SKILL.md
workshop-video-brain/skills/ff-youtube-analytics/: SKILL.md
workshop-video-brain/skills/obsidian-video-note/: SKILL.md
workshop-video-brain/skills/rough-cut-review/: SKILL.md
workshop-video-brain/skills/shot-plan/: SKILL.md
workshop-video-brain/skills/tutorial-script/: SKILL.md
workshop-video-brain/skills/video-idea-to-outline/: SKILL.md
workshop-video-brain/src/workshop_video_brain/: server.py
workshop-video-brain/src/workshop_video_brain/app/: cli.py  config.py  init_system.py  logging.py  paths.py
workshop-video-brain/src/workshop_video_brain/core/models/: __init__.py  _base.py  archive.py  assembly.py  broll_library.py  clips.py  color.py  compositing.py  enums.py  kdenlive.py  markers.py  media.py  pacing.py  patterns.py  planning.py  project.py  publishing.py  qc.py  social.py  timeline.py  title_cards.py  transcript.py  transitions.py  validation.py  visual_research.py  workspace.py  youtube.py
workshop-video-brain/src/workshop_video_brain/core/utils/: __init__.py  naming.py  paths.py
workshop-video-brain/src/workshop_video_brain/edit_mcp/adapters/ffmpeg/: audio.py  frames.py  probe.py  proxy.py  runner.py  scene.py  silence.py
workshop-video-brain/src/workshop_video_brain/edit_mcp/adapters/kdenlive/: __init__.py  effect_stack.py  parser.py  patcher.py  patcher_intents.py  producers.py  serializer.py  validator.py
workshop-video-brain/src/workshop_video_brain/edit_mcp/adapters/render/: executor.py  jobs.py  profiles.py
workshop-video-brain/src/workshop_video_brain/edit_mcp/adapters/stt/: whisper_engine.py
workshop-video-brain/src/workshop_video_brain/edit_mcp/adapters/transcript/: __init__.py  parsers.py
workshop-video-brain/src/workshop_video_brain/edit_mcp/adapters/youtube/: fetcher.py
workshop-video-brain/src/workshop_video_brain/edit_mcp/pipelines/: _common.py  ai_mask.py  analysis_common.py  archive.py  assembly.py  audio_sync.py  auto_mark.py  beat_grid.py  broll_library.py  broll_suggestions.py  clip_dupes.py  clip_labeler.py  clip_place.py  clip_preview.py  clip_search.py  color_grade.py  color_tools.py  color_wash.py  compositing.py  denoise_video.py  effect_apply.py  effect_catalog.py  effect_catalog_gen.py  effect_find.py  effect_presets.py  effect_wrapper_gen.py  guides.py  hologram.py  image_overlay.py  ingest.py  keyframes.py  loudness_scan.py  loudnorm_two_pass.py  marker_rules.py  masked_wipes.py  masking.py  motion_track.py  multicam.py  new_project.py  overlay_looks.py  (+41 more)
workshop-video-brain/src/workshop_video_brain/edit_mcp/pipelines/effect_wrappers/: __init__.py  effect_dust.py  effect_frei0r_aech0r.py  effect_frei0r_cairoimagegrid.py  effect_frei0r_cartoon.py  effect_frei0r_cluster.py  effect_frei0r_delay0r.py  effect_frei0r_edgeglow.py  effect_frei0r_equaliz0r.py  effect_frei0r_glitch0r.py  effect_frei0r_letterb0xed.py  effect_frei0r_luminance.py  effect_frei0r_mask0mate.py  effect_frei0r_mirr0r.py  effect_frei0r_nosync0r.py  effect_frei0r_scanline0r.py  effect_frei0r_sobel.py  effect_frei0r_tehroxx0r.py  effect_frei0r_transparency.py  effect_grain.py  effect_oldfilm.py  effect_scratchlines.py  effect_tcolor.py
workshop-video-brain/src/workshop_video_brain/edit_mcp/pipelines/visual_research/: __init__.py  candidates.py  dedup.py  export.py  handshake.py  regions.py  scoring.py  service.py
workshop-video-brain/src/workshop_video_brain/edit_mcp/server/: errors.py  resources.py  tools.py  tools_helpers.py
workshop-video-brain/src/workshop_video_brain/edit_mcp/server/bundles/: __init__.py  _pipeline_errors.py  ai_mask.py  audio_normalize_two_pass.py  audio_sync.py  beat_grid.py  clip_dupes.py  clip_place.py  clip_preview.py  guides.py  image_overlay.py  loudness_scan.py  masked_wipes.py  media_denoise_video.py  motion_track.py  multicam.py  overlay_looks.py  pan_zoom.py  proxy_wiring.py  qc_scan.py  review_loop.py  rewind.py  scene_detect.py  shake_shadow.py  shape_alpha_mask.py  shot_alignment.py  silence_segment.py  slideshow.py  (+10 more)
workshop-video-brain/src/workshop_video_brain/production_brain/notes/: __init__.py  frontmatter.py  updater.py  writer.py
workshop-video-brain/src/workshop_video_brain/production_brain/skills/: broll.py  capture_prep.py  outline.py  pattern.py  review.py  script.py  shot_plan.py  video_note.py  voiceover.py
workshop-video-brain/src/workshop_video_brain/workspace/: __init__.py  folders.py  manager.py  manifest.py  snapshot.py
workshop-video-brain/templates/obsidian/: visual-research-index.md
workshop-video-brain/templates/render/: master-dnxhr.yaml  master-prores.yaml  vimeo-hq.yaml  youtube-1080p.yaml  youtube-4k.yaml
(+979 files in other folders)
