[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workshop-video-brain"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0,<3",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "click>=8.1",
    "faster-whisper>=1.2.1",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
workshop-video-brain-server = "workshop_video_brain.server:main"
wvb = "workshop_video_brain.app.cli:main"

[dependency-groups]
dev = ["ruff", "mypy"]
test = ["pytest", "pytest-cov", "pillow"]

[tool.uv]
# Sync both groups by default so the documented `uv run pytest` resolves the
# in-venv pytest/fastmcp instead of falling back to a ~/.local pytest. `pillow`
# is a test dependency for the review-loop / image-overlay pipelines (which
# import PIL lazily at runtime).
default-groups = ["dev", "test"]

[tool.hatch.build.targets.wheel]
packages = ["workshop-video-brain/src/workshop_video_brain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["workshop-video-brain/src"]
markers = [
    "external: tests that shell out to real melt/ffprobe/ffmpeg (skipped when the tools are absent). Non-self-referential oracle suite -- see tests/integration/external/.",
    "render_retry: real-melt render tests eligible for a bounded 2-attempt retry under CPU-load flake (auto-applied to external tests that request the melt_bin fixture; see tests/conftest.py pytest_runtest_protocol).",
]
