[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workshop-video-brain"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0,<3",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "click>=8.1",
    "faster-whisper>=1.2.1",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
workshop-video-brain-server = "workshop_video_brain.server:main"
wvb = "workshop_video_brain.app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/workshop_video_brain"]
